# research2saas

./: .env  .env.example  Implementation_guide.md  README.md  Start_here.md  agno_integration.py  citation_graph_clustering.py  connectedpapers_tool.py  market_validator.py  pyproject.toml  requirements.txt  server.py  start.sh
src/research2saas/: __init__.py  config.py
src/research2saas/agents/: __init__.py  discovery.py  ideation.py  validation.py
src/research2saas/analysis/: __init__.py  citation_graph.py  market_validator.py
src/research2saas/knowledge/: __init__.py
src/research2saas/models/: __init__.py  paper.py  pollinations.py  validation.py
src/research2saas/tools/: __init__.py  semantic_scholar.py
src/research2saas/workflows/: __init__.py  idea_to_saas.py  ideation_workflow.py  saas_to_improvement.py
tmp/: research2saas_agents.db  research2saas_team.db
tmp/lancedb/research_papers.lance/_transactions/: 0-52753f47-ee2b-42dd-be8b-2439c9046c82.txn
tmp/lancedb/research_papers.lance/_versions/: 1.manifest
